--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 						<span id="boardMenuSpan" class="UIText">...</span>
                         <select id="boardMenu" onchange="changeBoard()">
                             <option value="none" selected="selected">...</option>
+							<option value="turtle_board">Turtle Board</option>
                             <option value="arduino_mega">Arduino Mega</option>
                             <option value="arduino_nano">Arduino Nano</option>
                             <option value="arduino_uno">Arduino Uno</option>
