--- a/index.html
+++ b/index.html
@@ -349,12 +349,12 @@
             </div>
         </div>
         <div id="overlayForModals" class="overlay" style="display: none;"></div>
-        <!-- <div id="boardListModal" class="modal"> -->
-            <!-- <div class="modal-content"> -->
-                <!-- <div class="modal-header">  -->
-                    <!-- <i class="fa fa-microchip"></i>Boards description -->
-                    <!-- <span class="closeModal" id="closeModalBoards">&times;</span> -->
-                <!-- </div> -->
+        <div id="boardListModal" class="modal">
+            <div class="modal-content">
+                <div class="modal-header"> 
+                    <i class="fa fa-microchip"></i>Boards description
+                    <span class="closeModal" id="closeModalBoards">&times;</span>
+                </div>
                 <!-- <div class="modal-body"> -->
                     <!-- <div id="board_mini_picture_div"> -->
                         <!-- <img id="board_mini_picture" /> -->
@@ -395,8 +395,8 @@
                     <!-- <span id="boardModal_sram"></span>Mémoire SRAM<span id="boardModal_sram_span" class="modalBoard_info">...</span><br> -->
                     <!-- <span id="boardModal_eeprom"></span>EEPROM<span id="boardModal_eeprom_span" class="modalBoard_info">...</span><br> -->
                 <!-- </div>  -->
-            <!-- </div> -->
-        <!-- </div> -->
+            </div>
+        </div>
         <div id="portListModal" class="modal">
             <div class="modal-content">
                 <div class="modal-header">
