--- a/index.html
+++ b/index.html
@@ -452,6 +452,7 @@
     <script src="./blocklyduino/blocks/blockly/math.js" async></script>
     <script src="./blocklyduino/blocks/grove/grove.js" async></script>
     <script src="./blocklyduino/blocks/servo/servo.js" async></script>
+    <script src="./blocklyduino/blocks/turtleSensors/turtle.js" async></script>
     <script src="./blocklyduino/blocks/typed_variable.js" async></script>
     <!-- blocklyduino specific: common generator code -->
     <script src="./generators/arduino_generator.js"></script>
@@ -467,6 +468,7 @@
     <script src="./blocklyduino/arduino/board/board_serial.js" async></script>
     <script src="./blocklyduino/arduino/typed_variable.js" async></script>
     <script src="./blocklyduino/arduino/addon/grove.js" async></script>
+    <script src="./blocklyduino/arduino/addon/turtle.js" async></script>
     <script src="./blocklyduino/arduino/addon/servo.js" async></script>
     <!-- blocklyduino specific -->
     <!-- Blockly themes added -->
