--- a/index.html
+++ b/index.html
@@ -127,11 +127,12 @@
                                 </button>
                                 <div id="content_code"></div>
                             </div>
-                            <div id="barre_h">
-                                <div id="checkDetails">
+                            <div id="barre_h" style="color: white; vertical-align: middle;">
+                                Output Pane
+                                <!-- <div id="checkDetails">
                                     <input type="checkbox" name="detailedCompilation" id="detailedCompilation"/>
                                     <span id="detailedCompilation_span"> </span>
-                                </div>
+                                </div> -->
                             </div>
                             <div id="content_serial"></div>
                         </div>
@@ -260,7 +261,12 @@
                                 <i class="fas fa-expand-arrows-alt"></i>
                             </span>
                         </button>
-					<br>
+                    <br>
+                    <br>
+                    <div id="checkDetails">
+                        <input type="checkbox" name="detailedCompilation" id="detailedCompilation"/>
+                        <span id="detailedCompilation_span"> </span>
+                    </div>
 					<br>
 					<br>
                     <form id="options">
