--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="google" value="notranslate">
         <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-        <title>Make Madness Studio</title>
+        <title>The Turtle Studio</title>
         <link rel="icon" type="image/png" href="./blocklyduino/media/logo_only.png" />
         <link rel="stylesheet" href="./css/font_awesome_all.min.css" />
         <link rel="stylesheet" href="./css/keyboard_nav.css" />
@@ -20,7 +20,7 @@
                         <span id="appName" class='TitleText'></span>
                     </td>
                     <td class="tabMiddle" style="width: 100%;">
-                        <span id="content_hoverButton"></span>
+                        <span id="content_hoverButton" ></span>
                     </td>
                 </tr>
                 <tr style="height: 30px;">
@@ -45,29 +45,29 @@
                                 <i class="fas fa-file-export"></i>
                             </span>
                         </button>
-                        <!-- <button id="undoButton" class="iconButtons" onclick="Code.Undo()"> -->
-                            <!-- <span id="undoButton_span" style="font-size: 1em;"> -->
-                                <!-- <i class="fas fa-undo-alt"></i> -->
-                            <!-- </span> -->
-                        <!-- </button> -->
-                        <!-- <button id="redoButton" class="iconButtons" onclick="Code.Redo()"> -->
-                            <!-- <i class="fas fa-redo-alt"></i> -->
-                            <!-- <span id="redoButton_span"></span> -->
-                        <!-- </button> -->
-                        <!-- <button id="boardButton" class="iconButtons" onclick="Code.boardsListModalShow()"> -->
-                            <!-- <i class="fas fa-microchip"></i> -->
-                            <!-- <span id="boardButton_span"></span> -->
-                        <!-- </button> -->
+                        <!-- <button id="undoButton" class="iconButtons" onclick="Code.Undo()">
+                            <span id="undoButton_span" style="font-size: 1em;">
+                                <i class="fas fa-undo-alt"></i>
+                            </span>
+                        </button> -->
+                        <!-- <button id="redoButton" class="iconButtons" onclick="Code.Redo()">
+                            <i class="fas fa-redo-alt"></i>
+                            <span id="redoButton_span"></span>
+                        </button>--> 
+                         <!-- <button id="boardButton" class="iconButtons" onclick="Code.boardsListModalShow()">
+                            <i class="fas fa-microchip"></i>
+                            <span id="boardButton_span"></span>
+                        </button>  -->
                         <button id="verifyButton" class="iconButtons">
                             <span id="verifyButton_span">
                                 <i class="fas fa-check"></i>
                             </span>
                         </button>
-                        <!-- <button id="serialButton" class="iconButtons" onclick="Code.portsListModalShow()"> -->
-                            <!-- <span id="serialButton_span"> -->
-                                <!-- <i class="fab fa-usb"></i> -->
-                            <!-- </span> -->
-                        <!-- </button> -->
+                        <button id="serialButton" class="iconButtons" onclick="Code.portsListModalShow()">
+                            <span id="serialButton_span"> 
+                                <i class="fab fa-usb"></i>
+                            </span>
+                        </button>
                         <button id="uploadButton" class="iconButtons">
                             <span id="uploadButton_span">
                                 <i class="fas fa-sign-out-alt"></i>
@@ -78,16 +78,16 @@
                                 <i class="fas fa-search"></i>
                             </span>
                         </button>
-                        <!-- <button id="fullScreenButton" class="iconButtons" onclick="fullScreen()"> -->
-                            <!-- <span id="fullScreenButton_span" style="font-size: 1em;"> -->
-                                <!-- <i class="fas fa-expand-arrows-alt"></i> -->
-                            <!-- </span> -->
-                        <!-- </button> -->
-                        <!-- <button id="resetButton" class="iconButtons" onclick="Code.ResetWorkspace()"> -->
-                            <!-- <span id="resetButton_span"> -->
-                                <!-- <i class="fas fa-power-off"></i> -->
-                            <!-- </span> -->
-                        <!-- </button> -->
+                        <!-- <button id="fullScreenButton" class="iconButtons" onclick="fullScreen()">
+                            <span id="fullScreenButton_span" style="font-size: 1em;">
+                                <i class="fas fa-expand-arrows-alt"></i>
+                            </span>
+                        </button> -->
+                        <!-- <button id="resetButton" class="iconButtons" onclick="Code.ResetWorkspace()">
+                            <span id="resetButton_span">
+                                <i class="fas fa-power-off"></i>
+                            </span>
+                        </button> -->
                         <button id="helpButton" class="iconButtons" onclick="toggleDisplayHelpModal()">
                             <span id="helpButton_span">
                                 <i class="fas fa-question"></i>
@@ -115,10 +115,7 @@
                                     <div id="content_blocks"></div>
                                 </div>
                                 <div id="separator">
-                                    <label id="editorReadOnlyToggle" class="switch">
-                                        <input type="checkbox" onclick="toggleEditorReadOnly(this)">
-                                        <span class="slider"></span>
-                                    </label>
+                                    
                                 </div>
                                 <button id="copyCodeButton" class="iconButtons" onclick="Code.copyToClipboard()">
                                     <span id="copyCodeButton_span">
@@ -139,17 +136,21 @@
                     </td>
                 </tr>
             </table>
-        </div>
-        <div id="helpModal">
+        </div>        
+        <!-- <button type="button" class="collapsibleButton">Details</button> -->
+        <div id="helpModal">            
             <div id="helpModal_header">
+                <button class="closeModal" type="button" onclick="toggleDisplayHelpModal()">X</button>
                 <span id="helpModalSpan_title"></span>
             </div>
             <div id="helpModal_text">
                 <span id="helpModalSpan_text"></span>
             </div>
         </div>
+        <!-- <button class=\"closeModal\" type=\"button\" onclick=\"toggleDisplayKeyMappings()\">X</button> -->
         <div id="keyboard_nav">
             <div id="keyboard_nav_header">
+                <button class="closeModal" type="button" onclick="toggleDisplayKeyMappings(false)">X</button>
                 <span id="keyMappingModalSpan"></span>
             </div>
             <form id="keyboard_mappings"></form>
@@ -263,11 +264,16 @@
                         </button>
                     <br>
                     <br>
+                    <!-- class="switch" -->
+                    <div id="editorReadOnlyToggle" > 
+                        <input type="checkbox" onclick="toggleEditorReadOnly(this)">
+                        <!-- class="slider" -->
+                        <span id="editorReadOnlyToggle_span"> </span>
+                    </div>                    
                     <div id="checkDetails">
                         <input type="checkbox" name="detailedCompilation" id="detailedCompilation"/>
                         <span id="detailedCompilation_span"> </span>
-                    </div>
-					<br>
+                    </div>					
 					<br>
                     <form id="options">
                         <!-- <select name="toolbox" onchange="document.forms.options.submit('options')"> -->
